<resources>
    <string name="app_name">SportTrip</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="watch">Watch</string>
    <string name="settings">Settings</string>
    <string name="leaguesHeader">Leagues</string>
    <string name="nhlLeague">NHL</string>
    <string name="mlbLeague">MLB</string>
    <string name="findMatches">Find Matches</string>
    <string name="titleCustomPH">Title</string>
    <string name="dateCustomPH">Date</string>
    <string name="team1CustomPH">Team 1</string>
    <string name="team1GoalCustomPH">3</string>
    <string name="team2CustomPH">Team 2</string>
    <string name="team2GoalCustomPH">4</string>
    <string name="gameEndingPH">OT</string>
    <string name="minDate">01/13/2021</string>
</resources>