<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".SearchActivity">

    <Button
        android:id="@+id/findBtn"
        android:layout_width="162dp"
        android:layout_height="41dp"
        android:background="@color/Blue"
        android:onClick="findBtnClick"
        android:text="@string/findMatches"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/nhlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Blue"
        android:onClick="onLeagueBtnClick"
        android:text="@string/nhlLeague"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toStartOf="@+id/mlbBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leagueTextView" />

    <Button
        android:id="@+id/mlbBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:background="#1E1D1D"
        android:onClick="onLeagueBtnClick"
        android:text="@string/mlbLeague"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leagueTextView" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="308dp"
        android:layout_height="322dp"
        android:layout_marginTop="124dp"
        android:background="@color/White"
        android:colorControlActivated="@color/Blue"
        android:datePickerStyle="@color/Blue"
        android:selectedDateVerticalBar="@color/Blue"
        android:selectedWeekBackgroundColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leagueTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/rangeSwitch"
        android:layout_width="184dp"
        android:layout_height="54dp"
        android:text="Single Day"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <TextView
        android:id="@+id/leagueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/leaguesHeader"
        android:textAlignment="viewStart"
        android:textColor="@color/White"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/Black"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>